--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-component",
     "hoc"
   ],
+  "engines": {
+    "node": ">= 8.0"
+  },
   "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
   "contributors": [
     "Chris Trevino <darthtrevino@gmail.com> (http://github.com/darthtrevino)",
@@ -90,7 +93,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "husky": "^4.0.0",
+    "husky": "^3.1.0",
     "inquirer": "^7.0.0",
     "jest": "^24.9.0",
     "jest-environment-jsdom": "^24.9.0",
