--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -96,3 +96,14 @@ jobs:
         if: success() && matrix.node-version == '12.x'
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+
+  auto-merge:
+    name: Auto-Merge Dependabot PRs
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - name: auto-merge
+        uses: ridedott/dependabot-auto-merge-action@master
+        with:
+          GITHUB_TOKEN: ${{ secrets.AUTOMERGE_PAT }}
