--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,13 +3,13 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-    - master
+      - master
 
 jobs:
-  build-deploy:
+  deploy-documentation:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@master        
+      - uses: actions/checkout@master
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
@@ -20,7 +20,7 @@ jobs:
       - run: yarn lerna run build_site --scope react-dnd-documentation
 
       - name: deploy
-        uses: peaceiris/actions-gh-pages@v2.5.0
+        uses: peaceiris/actions-gh-pages@v2.10.1
         env:
           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           PUBLISH_BRANCH: gh-pages
