--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@babel/preset-env": "^7.7.5",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "@rollup/plugin-replace": "darthtrevino/rollup-replace-temp-deleteme#master",
+    "@rollup/plugin-replace": "^2.3.0",
     "@types/jest": "^24.0.23",
     "@types/enzyme": "^3.10.4",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
@@ -165,7 +165,7 @@
   "lint-staged": {
     "*.{ts,tsx}": [
       "eslint --fix",
-      "git add"
+      "prettier"
     ]
   },
   "prettier": {
