--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -86,7 +86,7 @@ jobs:
         name: Install Dependencies
         if: steps.cache-yarn-cache.outputs.cache-hit != 'true' || steps.cache-node-modules.outputs.cache-hit != 'true'
 
-      - run: yarn ci
+      - run: yarn test
         name: Execute Tests
         env:
           CI: true
