--- a/package.json
+++ b/package.json
@@ -51,10 +51,7 @@
     "release:packages": "lerna publish",
     "test_modules": "CI=true lerna run test --stream",
     "go_no_go": "node scripts/go_no_go.js",
-    "verify_source": "run-p lint build",
-    "run_tests": "run-p test_modules jest:cov",
-    "test": "run-s clean verify_source run_tests",
-    "ci": "run-s verify_source run_tests",
+    "test": "run-s clean lint build test_modules jest:cov",
     "prettify:source": "prettier 'packages/*/*/src/**/*.ts*'",
     "prettify": "prettier 'packages/*/**/*.js' 'examples/**/*.js' 'site/**/*.js'",
     "precommit:lint": "lint-staged",
@@ -78,24 +75,24 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@rollup/plugin-replace": "^2.3.0",
-    "@types/jest": "^25.1.0",
     "@types/enzyme": "^3.10.4",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
+    "@types/jest": "^25.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
     "alex": "^8.0.1",
     "conventional-changelog-cli": "^2.0.27",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^6.7.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-config-react-app": "^5.0.2",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-no-for-of-loops": "^1.0.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.2",
     "husky": "^4.x",
     "inquirer": "^7.0.0",
-    "jest": "^25.1.0",
+    "jest": "^26.0.1",
     "jest-environment-jsdom": "^26.0.0",
     "lerna": "^3.19.0",
     "lint-staged": "^10.0.0",
@@ -103,14 +100,12 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.1",
     "pretty-quick": "^2.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "replace-in-file": "^6.0.0",
     "rollup": "^2.6.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.2",
-    "ts-jest": "^25.0.0",
+    "ts-jest": "^26.0.0",
     "typescript": "^3.7.2"
   },
   "jest": {
