--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "homepage": "https://github.com/react-dnd/react-dnd",
   "scripts": {
-    "clean": "lerna run clean",
+    "clean": "lerna run clean --parallel",
     "build": "lerna run build --stream",
     "unit_test": "jest",
     "jest:watch": "jest --watch",
