fix: do not cancel touch events if they are non-cancelable (#2190)
* fix: do not cancel touch events if they are non-cancelable

This prevents errors like this in Chrome mobile:
```
IgnoredEventCancel: Ignored attempt to cancel a touchmove event with cancelable=false, for example because scrolling is in progress and cannot be interrupted.
```

* build: update auto-merge to check actor

* build: add node 14 to build matrix

* build: add codecov.yml to tune codecov settings

turn off patch coverage checks

Co-authored-by: Chris Trevino <chtrevin@microsoft.com>

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [10.x, 12.x, 14.x]
 
     steps:
       - uses: actions/checkout@v1
@@ -93,12 +93,13 @@ jobs:
 
       - name: Publish coverage to codecov.io
         uses: codecov/codecov-action@v1.0.3
-        if: success() && matrix.node-version == '12.x'
+        if: success() && matrix.node-version == '14.x'
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
   auto-merge:
     name: Auto-Merge Dependabot PRs
+    if: ${{github.actor == 'dependabot-preview'}}
     runs-on: ubuntu-latest
     needs:
       - build
