--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -99,7 +99,7 @@ jobs:
 
   auto-merge:
     name: Auto-Merge Dependabot PRs
-    if: ${{github.actor == 'dependabot-preview'}}
+    if: ${{github.actor == 'dependabot-preview[bot]'}}
     runs-on: ubuntu-latest
     needs:
       - build
