--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -102,7 +102,7 @@ jobs:
 
   auto-merge:
     name: Auto-Merge Dependabot PRs
-    if: ${{github.actor == 'dependabot-preview[bot]'}}
+    if: ${{github.actor}} == 'dependabot-preview[bot]'
     runs-on: ubuntu-latest
     needs:
       - build
