build: fix main branch switch (#2608)

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,7 +9,7 @@ jobs:
   deploy-documentation:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@master
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
