Replace Yarn with pnpm (#2748)
* build: use pnpm

* build: add rimraf dep

* build: add npmrc

* fix: add some missing dependencies

* build: add missing deps for test

* fix: mess with test deps

* build: add deps to get docsite running

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   },
   "homepage": "https://github.com/react-dnd/react-dnd",
   "scripts": {
-    "clean": "lerna run clean --parallel",
-    "build": "lerna run build --stream",
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "shx rm -rf node_modules/@types/react-native",
+    "clean": "pnpm run clean -r --parallel",
+    "build": "pnpm run build -r --stream",
     "unit_test": "jest",
     "jest:watch": "jest --watch",
     "jest:cov": "jest --coverage",
@@ -50,16 +52,17 @@
     "release_canary": "lerna publish -c --preid next --yes",
     "release": "run-s clean test go_no_go release:packages changelog",
     "release:packages": "lerna publish",
-    "test_modules": "CI=true lerna run test --stream",
+    "test_modules": "CI=true pnpm run test -r --stream",
     "go_no_go": "node scripts/go_no_go.js",
-    "test": "run-s clean lint build test_modules jest:cov",
+    "ci": "run-s clean lint build test_modules jest:cov",
     "prettify:source": "prettier 'packages/*/*/src/**/*.ts*'",
-    "prettify": "prettier 'packages/*/**/*.js' 'examples/**/*.js' 'site/**/*.js'",
+    "prettify": "pretty-quick --fix",
     "precommit:lint": "lint-staged",
     "precommit:format": "pretty-quick --staged",
-    "start": "lerna run --parallel --stream start",
-    "start_docs": "lerna run --stream start --scope react-dnd-documentation",
-    "watch": "lerna run --parallel --stream watch"
+    "start": "pnpm run -r --parallel --stream start",
+    "start_docs": "pnpm run --stream --scope react-dnd-documentation start",
+    "watch": "pnpm run -r --parallel --stream watch",
+    "git-is-clean": "git diff-index --quiet HEAD"
   },
   "husky": {
     "hooks": {
@@ -68,46 +71,53 @@
     }
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
-    "@babel/preset-env": "^7.7.5",
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
-    "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-replace": "^2.3.2",
-    "@types/enzyme": "^3.10.4",
-    "@types/jest": "^26.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
-    "alex": "^8.0.1",
-    "conventional-changelog-cli": "^2.0.27",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "enzyme": "^3.10.0",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "@types/enzyme": "^3.10.5",
+    "@types/jest": "^26.0.13",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "alex": "^9.0.1",
+    "conventional-changelog-cli": "^2.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-no-for-of-loops": "^1.0.1",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react-hooks": "^4.0.2",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint": "^7.1.0",
-    "husky": "^4.x",
-    "inquirer": "^7.0.0",
-    "jest-environment-jsdom": "^26.0.0",
-    "jest": "^26.0.1",
-    "lerna": "^3.19.0",
-    "lint-staged": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "husky": "^4.2.5",
+    "inquirer": "^7.3.3",
+    "jest": "^26.4.2",
+    "jest-environment-jsdom": "^26.3.0",
+    "lerna": "^3.22.1",
+    "lint-staged": "^10.3.0",
     "markdown-spellcheck": "^1.3.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.1",
-    "pretty-quick": "^2.0.1",
-    "replace-in-file": "^6.0.0",
-    "rollup-plugin-terser": "^6.1.0",
-    "rollup": "^2.6.1",
-    "ts-jest": "^26.0.0",
-    "typescript": "^3.7.2"
+    "prettier": "^2.1.1",
+    "pretty-quick": "^3.0.0",
+    "react-dnd": "^11.1.3",
+    "react-dnd-test-utils": "11.1.3",
+    "react-dnd-html5-backend": "11.1.3",
+    "react-dnd-touch-backend": "11.1.3",
+    "react-dnd-test-backend": "11.1.3",
+    "replace-in-file": "^6.1.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.26.10",
+    "rollup-plugin-terser": "^7.0.2",
+    "shx": "^0.3.2",
+    "ts-jest": "^26.3.0",
+    "typescript": "^4.0.2"
   },
   "jest": {
     "clearMocks": true,
@@ -125,14 +135,6 @@
       "<rootDir>/packages/core/",
       "<rootDir>/packages/testing/"
     ],
-    "moduleNameMapper": {
-      "^dnd-core$": "dnd-core/dist/cjs",
-      "^react-dnd$": "react-dnd/dist/cjs",
-      "^react-dnd-html5-backend$": "html5-backend/dist/cjs",
-      "^react-dnd-touch-backend$": "touch-backend/dist/cjs",
-      "^react-dnd-test-backend$": "react-dnd-test-backend/dist/cjs",
-      "^react-dnd-test-utils$": "react-dnd-test-utils/dist/cjs"
-    },
     "collectCoverageFrom": [
       "packages/core/**/*.{ts,tsx}",
       "!**/node_modules/**",
@@ -184,18 +186,6 @@
           "tabWidth": 2
         }
       }
-    ]
-  },
-  "workspaces": {
-    "packages": [
-      "packages/alternative_builds/umd",
-      "packages/alternative_builds/cjs/*",
-      "packages/documentation/*",
-      "packages/testing/*",
-      "packages/core/*"
-    ],
-    "nohoist": [
-      "react-dnd-documentation/**"
     ]
   }
 }
