--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,8 +15,9 @@ jobs:
         with:
           node-version: 12.x
 
-      - run: yarn install
-      - run: yarn build
+      - run: npm i -g pnpm
+      - run: pnpm install
+      - run: pnpm build
       - run: yarn lerna run build_site --scope react-dnd-documentation
 
       - name: deploy
