--- a/packages/documentation/examples-decorators/package.json
+++ b/packages/documentation/examples-decorators/package.json
@@ -25,6 +25,7 @@
     "dnd-core": "^11.1.3",
     "faker": "^4.1.0",
     "immutability-helper": "^3.0.0",
+    "lodash": "^4.17.20",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-frame-component": "^4.1.1"
