--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ coverage
 test-results.xml
 *-*.log
 .jest-cache
+
+# Yarn v2
+# https://yarnpkg.com/advanced/qa#which-files-should-be-gitignored
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
