--- a/package.json
+++ b/package.json
@@ -36,32 +36,29 @@
   },
   "homepage": "https://github.com/react-dnd/react-dnd",
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
+    "preinstall": "npx only-allow yarn",
     "postinstall": "shx rm -rf node_modules/@types/react-native",
-    "clean": "pnpm run clean -r --parallel",
-    "build": "pnpm run build -r --stream",
+    "clean": "yarn workspaces foreach -pv run clean",
+    "build": "yarn workspaces foreach -vt run build",
     "unit_test": "jest",
-    "jest:watch": "jest --watch",
-    "jest:cov": "jest --coverage",
+    "unit_test:watch": "jest --watch",
+    "unit_test:coverage": "jest --coverage",
     "lint:code": "eslint . --ext .js,.ts,.jsx,.tsx",
     "lint:spelling": "mdspell 'packages/documentation/docsite/markdown/**/*.md' --en-us --report",
     "lint:tone": "alex .",
     "lint:formatting": "pretty-quick --check",
-    "lint": "run-s lint:*",
+    "lint": "run-s 'lint:*'",
     "changelog": "conventional-changelog -p eslint -i CHANGELOG.md -s -r 0",
-    "release_canary": "lerna publish -c --preid next --yes",
     "release": "run-s clean test go_no_go release:packages changelog",
-    "release:packages": "lerna publish",
-    "test_modules": "CI=true pnpm run test -r --stream",
+    "test_modules": "CI=true yarn workspaces foreach -pv run test",
     "go_no_go": "node scripts/go_no_go.js",
-    "ci": "run-s clean lint build test_modules jest:cov",
+    "ci": "run-s clean lint build test_modules unit_test:coverage",
     "prettify:source": "prettier 'packages/*/*/src/**/*.ts*'",
     "prettify": "pretty-quick --fix",
     "precommit:lint": "lint-staged",
     "precommit:format": "pretty-quick --staged",
-    "start": "pnpm run -r --parallel --stream start",
-    "start_docs": "pnpm run --stream --scope react-dnd-documentation start",
-    "watch": "pnpm run -r --parallel --stream watch",
+    "start": "yarn workspaces foreach -pvi run start",
+    "watch": "yarn workspaces foreach -pvi run watch",
     "git-is-clean": "git diff-index --quiet HEAD"
   },
   "husky": {
@@ -70,54 +67,58 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
+  "workspaces": [
+    "packages/*/*"
+  ],
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
-    "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^9.1.2",
-    "@rollup/plugin-commonjs": "^15.0.0",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
-    "@types/enzyme": "^3.10.5",
-    "@types/jest": "^26.0.13",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "@types/jest": "^26.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "alex": "^9.0.1",
     "conventional-changelog-cli": "^2.1.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-no-for-of-loops": "^1.0.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "husky": "^4.2.5",
+    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "husky": "^4.3.0",
     "inquirer": "^7.3.3",
     "jest": "^26.4.2",
     "jest-environment-jsdom": "^26.3.0",
-    "lerna": "^3.22.1",
-    "lint-staged": "^10.3.0",
+    "lint-staged": "^10.4.0",
     "markdown-spellcheck": "^1.3.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.1",
-    "pretty-quick": "^3.0.0",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.0.2",
+    "react": "^16.13.1",
     "react-dnd": "^11.1.3",
-    "react-dnd-test-utils": "11.1.3",
     "react-dnd-html5-backend": "11.1.3",
-    "react-dnd-touch-backend": "11.1.3",
     "react-dnd-test-backend": "11.1.3",
+    "react-dnd-test-utils": "11.1.3",
+    "react-dnd-touch-backend": "11.1.3",
+    "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.1",
     "replace-in-file": "^6.1.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.26.10",
+    "rollup": "^2.28.2",
     "rollup-plugin-terser": "^7.0.2",
     "shx": "^0.3.2",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.0.2"
+    "ts-jest": "^26.4.1",
+    "typescript": "^4.0.3"
   },
   "jest": {
     "clearMocks": true,
@@ -187,5 +188,9 @@
         }
       }
     ]
+  },
+  "resolutions": {
+    "@types/react": "16.9.50",
+    "@types/react-dom": "16.9.8"
   }
 }
