--- a/packages/documentation/examples-decorators/tsconfig.docs.json
+++ b/packages/documentation/examples-decorators/tsconfig.docs.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "jsx": "preserve",
-    "outDir": "./dist/docs",
+    "outDir": "dist/docs",
     "baseUrl": "./",
     "declaration": false,
     "emitDeclarationOnly": false,
