--- a/packages/core/dnd-core/package.json
+++ b/packages/core/dnd-core/package.json
@@ -3,8 +3,8 @@
   "version": "11.1.3",
   "description": "Drag and drop sans the GUI",
   "license": "MIT",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "scripts": {
@@ -19,6 +19,6 @@
   "dependencies": {
     "@react-dnd/asap": "^4.0.0",
     "@react-dnd/invariant": "^2.0.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.5"
   }
 }
