--- a/packages/core/html5-backend/package.json
+++ b/packages/core/html5-backend/package.json
@@ -2,8 +2,8 @@
   "name": "react-dnd-html5-backend",
   "version": "11.1.3",
   "description": "HTML5 backend for React DnD",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "lib/index.d.ts",
   "sideEffects": false,
   "license": "MIT",
@@ -20,9 +20,9 @@
     "dnd-core": "^11.1.3"
   },
   "devDependencies": {
-    "@types/react": "^16.9.35",
-    "react": "^16.12.0",
+    "@types/react": "^16.9.50",
+    "react": "^16.13.1",
     "react-dnd-test-backend": "^11.1.3",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.13.1"
   }
 }
