--- a/packages/core/touch-backend/package.json
+++ b/packages/core/touch-backend/package.json
@@ -2,8 +2,8 @@
   "name": "react-dnd-touch-backend",
   "version": "11.1.3",
   "description": "Touch backend for react-dnd",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "lib/index.d.ts",
   "sideEffects": false,
   "license": "MIT",
