--- a/packages/documentation/examples-decorators/package.json
+++ b/packages/documentation/examples-decorators/package.json
@@ -20,23 +20,24 @@
     "build:docs": "tsc -b tsconfig.docs.json"
   },
   "dependencies": {
-    "@types/faker": "^4.1.7",
-    "@types/lodash": "^4.14.146",
     "dnd-core": "^11.1.3",
-    "faker": "^4.1.0",
-    "immutability-helper": "^3.0.0",
+    "faker": "^5.1.0",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.20",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
-    "react-frame-component": "^4.1.1"
+    "react-frame-component": "^4.1.3"
   },
   "devDependencies": {
-    "@types/react": "^16.9.35",
+    "@types/enzyme": "^3.10.7",
+    "@types/faker": "^5.1.2",
+    "@types/lodash": "^4.14.161",
+    "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "npm-run-all": "^4.1.5",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-dnd-test-utils": "^11.1.3",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.13.1"
   },
   "peerDependencies": {
     "react": ">= 16.9.0",
