--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postinstall": "shx rm -rf node_modules/@types/react-native",
     "clean": "yarn workspaces foreach -pv run clean",
     "build": "yarn workspaces foreach -vt run build",
+    "build_docsite": "yarn workspaces foreach --include react-dnd-documentation run build_site",
     "unit_test": "jest",
     "unit_test:watch": "jest --watch",
     "unit_test:coverage": "jest --coverage",
@@ -49,10 +50,8 @@
     "lint:formatting": "pretty-quick --check",
     "lint": "run-s 'lint:*'",
     "changelog": "conventional-changelog -p eslint -i CHANGELOG.md -s -r 0",
-    "release": "run-s clean test go_no_go release:packages changelog",
     "test_modules": "CI=true yarn workspaces foreach -pv run test",
-    "go_no_go": "node scripts/go_no_go.js",
-    "ci": "run-s clean lint build test_modules unit_test:coverage",
+    "ci": "run-s clean lint build test_modules unit_test:coverage build_docsite",
     "prettify:source": "prettier 'packages/*/*/src/**/*.ts*'",
     "prettify": "pretty-quick --fix",
     "precommit:lint": "lint-staged",
