--- a/packages/documentation/docsite/package.json
+++ b/packages/documentation/docsite/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@mikaelkristiansson/domready": "^1.0.10",
     "@reach/router": "^1.3.4",
+    "babel-plugin-styled-components": "^1.11.1",
+    "bluebird": "^3.7.2",
     "debug": "^4.2.0",
     "event-source-polyfill": "^1.0.20",
     "gatsby": "^2.24.67",
@@ -76,9 +78,9 @@
     "copy_examples:ts_hooks": "cp -r ../examples-hooks/src static/examples_hooks_ts",
     "copy_examples:js_decorators": "cp -r ../examples-decorators/dist/docs static/examples_decorators_js",
     "copy_examples:ts_decorators": "cp -r ../examples-decorators/src static/examples_decorators_ts",
-    "copy_examples": "run-s copy_examples:*",
+    "copy_examples": "run-s 'copy_examples:*'",
     "prune_buildinfo": "rimraf static/examples_hooks_js/tsconfig.docs.tsbuildinfo static/examples_decorators_js/tsconfig.docs.tsbuildinfo",
-    "format_examples": "prettier 'static/examples_*/**/*' --use-tabs=false --write",
+    "format_examples": "prettier 'static/examples_*/**/*.(js|ts|tsx)' --use-tabs=false --write",
     "write_example_boilerplate": "node write_sample_boilerplate.js",
     "process_examples": "run-s copy_examples prune_buildinfo format_examples write_example_boilerplate",
     "build_gatsby": "gatsby build --prefix-paths",
