Improve build tooling (#2775)
* build: upgrade yarn

* build: yarn formatted yarnrc

* docs: documentation update

* build: add version check build step

* build: replace clean/build scripts with just-scripts

* build: use a gulp-based build system

* build: make watch task consistent

* build: move rollup deps to build pkg

* build: remove shx from top, push it into docsite

* build: delete old watch script

* build: remove unnecessary lage command

* build: pkg updates

* build: define changeset

* build: move version check outside of long build loop

* build: move babel plugin to build pkg; break out dotfiles

* build: add plugin-proposal-optional-chaining to babel stack

* build: restore pipeline name to prevent build loops from parent pkg

* build: work on pnp mode

* build: get unit tests running in pnp

* build: yarn config updates

* build: pnpify some sdks, get tests running without a build

* build: describe peer deps more completele in react-dnd

* build: remove unnecessary devDeps from html5-backend; improve peerDeps

* build: remove cra-test

* build: use react 17-rc.3

* build: get docsite running

* build: use yarn zero-install

* build: remove pipeline script

* build: use --topological-dev in build_all

* build: correct hoist-non-react-statics import

* build: remove SDI from react-dnd

* build: revert sdi for now

* build: revert react, get tests running

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Changelog Chcek
+        run: yarn version check
+
       - run: yarn install
         name: Install Dependencies
 
