--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,16 @@
-nmHoistingLimits: dependencies
+changesetBaseRefs:
+  - main
+  - origin/main
+  - upstream/main
 
-nodeLinker: node-modules
+changesetIgnorePatterns:
+  - '**/*.spec.{js,ts,tsx}'
+
+packageExtensions:
+  gatsby@*:
+    dependencies:
+      babel-plugin-styled-components: '^1.11.1'
+      '@babel/types': '^7.12.0'
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
@@ -10,12 +20,4 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
     spec: '@yarnpkg/plugin-version'
 
-yarnPath: .yarn/releases/yarn-2.3.0.cjs
-
-changesetBaseRefs:
-  - 'main'
-  - 'origin/main'
-  - 'upstream/main'
-
-changesetIgnorePatterns:
-  - '**/*.spec.{js,ts,tsx}'
+yarnPath: .yarn/releases/yarn-2.3.2.cjs
