--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   "homepage": "https://github.com/react-dnd/react-dnd",
   "scripts": {
     "preinstall": "npx only-allow yarn",
-    "postinstall": "shx rm -rf node_modules/@types/react-native",
-    "clean": "yarn workspaces foreach -pv run clean",
-    "build": "yarn workspaces foreach -vt run build",
-    "build_docsite": "yarn workspaces foreach --include react-dnd-documentation run build_site",
+    "clean_all": "yarn workspaces foreach -pv run clean",
+    "build_all": "yarn workspaces foreach -pv --topological-dev run build",
+    "test_all": "yarn workspaces foreach -pv run test",
+    "build_docsite": "yarn build:docsite",
     "unit_test": "jest",
     "unit_test:watch": "jest --watch",
     "unit_test:coverage": "jest --coverage",
@@ -50,49 +50,34 @@
     "lint:formatting": "pretty-quick --check",
     "lint": "run-s 'lint:*'",
     "changelog": "conventional-changelog -p eslint -i CHANGELOG.md -s -r 0",
-    "test_modules": "CI=true yarn workspaces foreach -pv run test",
-    "ci": "run-s clean lint build test_modules unit_test:coverage build_docsite",
+    "ci": "run-s build_all test_all lint unit_test:coverage build_docsite git-is-clean",
     "prettify:source": "prettier 'packages/*/*/src/**/*.ts*'",
     "prettify": "pretty-quick --fix",
     "precommit:lint": "lint-staged",
     "precommit:format": "pretty-quick --staged",
-    "start": "yarn workspaces foreach -pvi run start",
     "watch": "yarn workspaces foreach -pvi run watch",
     "git-is-clean": "git diff-index --quiet HEAD"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "run-s precommit:lint precommit:format",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
   "workspaces": [
+    "scripts",
     "packages/*/*"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-replace": "^2.3.3",
     "@types/jest": "^26.0.14",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "alex": "^9.0.1",
     "conventional-changelog-cli": "^2.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "eslint": "^7.10.0",
+    "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-no-for-of-loops": "^1.0.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
     "husky": "^4.3.0",
     "inquirer": "^7.3.3",
@@ -102,94 +87,19 @@
     "markdown-spellcheck": "^1.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
-    "pretty-quick": "^3.0.2",
-    "react": "^16.13.1",
+    "pretty-quick": "^3.1.0",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "11.1.3",
     "react-dnd-test-backend": "11.1.3",
     "react-dnd-test-utils": "11.1.3",
     "react-dnd-touch-backend": "11.1.3",
-    "react-dom": "^16.13.1",
-    "react-test-renderer": "^16.13.1",
     "replace-in-file": "^6.1.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.28.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "shx": "^0.3.2",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   },
-  "jest": {
-    "clearMocks": true,
-    "cacheDirectory": ".jest-cache",
-    "setupFilesAfterEnv": [
-      "<rootDir>/jest/setup-enzyme.js"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx"
-    ],
-    "modulePaths": [
-      "<rootDir>/packages/core/",
-      "<rootDir>/packages/testing/"
-    ],
-    "collectCoverageFrom": [
-      "packages/core/**/*.{ts,tsx}",
-      "!**/node_modules/**",
-      "!**/lib/**",
-      "!**/__tests__/**"
-    ],
-    "testMatch": [
-      "<rootDir>/__tests__/**/?(*.)(spec|test).ts(x|)",
-      "<rootDir>/packages/core/dnd-core/src/**/__tests__/**/?(*.)(spec|test).ts(x|)",
-      "<rootDir>/packages/core/react-dnd/src/**/__tests__/**/?(*.)(spec|test).ts(x|)",
-      "<rootDir>/packages/core/html5-backend/src/**/__tests__/**/?(*.)(spec|test).ts(x|)",
-      "<rootDir>/packages/core/touch-backend/src/**/__tests__/**/?(*.)(spec|test).ts(x|)"
-    ],
-    "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
-    },
-    "globals": {
-      "ts-jest": {
-        "tsConfig": "tsconfig.jest.json",
-        "diagnostics": {
-          "pathRegex": "/.(spec|test).ts$/"
-        }
-      }
-    }
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier"
-    ]
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "useTabs": true,
-    "overrides": [
-      {
-        "files": "*.md",
-        "options": {
-          "useTabs": false,
-          "trailingComma": "none"
-        }
-      },
-      {
-        "files": "*.json",
-        "options": {
-          "useTabs": false,
-          "tabWidth": 2
-        }
-      }
-    ]
-  },
   "resolutions": {
-    "@types/react": "16.9.50",
+    "@types/react": "16.9.51",
     "@types/react-dom": "16.9.8"
   }
 }
