--- a/packages/core/html5-backend/package.json
+++ b/packages/core/html5-backend/package.json
@@ -2,9 +2,12 @@
   "name": "react-dnd-html5-backend",
   "version": "11.1.3",
   "description": "HTML5 backend for React DnD",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "lib/index.d.ts",
+  "main": "src/index.ts",
+  "publishConfig": {
+    "main": "dist/cjs/index.js",
+    "module": "dist/esm/index.js",
+    "types": "dist/types/index.d.ts"
+  },
   "sideEffects": false,
   "license": "MIT",
   "repository": {
@@ -12,17 +15,29 @@
     "url": "https://github.com/react-dnd/react-dnd.git"
   },
   "scripts": {
-    "clean": "../../../scripts/clean_package.sh",
-    "build": "../../../scripts/build_package.sh",
-    "start": "../../../scripts/watch_package.sh"
+    "clean": "gulp clean",
+    "build": "gulp build",
+    "watch": "gulp watch"
   },
   "dependencies": {
     "dnd-core": "^11.1.3"
   },
   "devDependencies": {
-    "@types/react": "^16.9.50",
-    "react": "^16.13.1",
-    "react-dnd-test-backend": "^11.1.3",
-    "react-dom": "^16.13.1"
+    "@react-dnd/build": "^11.1.3",
+    "gulp": "^4.0.2"
+  },
+  "umd": {
+    "name": "ReactDnDHTML5Backend",
+    "input": "./dist/esm/index.js",
+    "external": [
+      "react",
+      "react-dom",
+      "react-dnd"
+    ],
+    "globals": {
+      "react": "React",
+      "react-dom": "ReactDOM",
+      "react-dnd": "ReactDnD"
+    }
   }
 }
