--- a/packages/documentation/docsite/package.json
+++ b/packages/documentation/docsite/package.json
@@ -5,47 +5,35 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@mikaelkristiansson/domready": "^1.0.10",
-    "@reach/router": "^1.3.4",
-    "babel-plugin-styled-components": "^1.11.1",
-    "bluebird": "^3.7.2",
     "debug": "^4.2.0",
-    "event-source-polyfill": "^1.0.20",
-    "gatsby": "^2.24.67",
-    "gatsby-image": "^2.4.20",
-    "gatsby-legacy-polyfills": "^0.0.5",
-    "gatsby-link": "^2.4.15",
-    "gatsby-plugin-manifest": "^2.4.33",
-    "gatsby-plugin-offline": "^3.2.30",
-    "gatsby-plugin-react-helmet": "^3.3.12",
-    "gatsby-plugin-sharp": "^2.6.38",
-    "gatsby-plugin-styled-components": "^3.3.12",
-    "gatsby-plugin-typescript": "^2.4.21",
-    "gatsby-plugin-typography": "^2.5.12",
-    "gatsby-react-router-scroll": "^3.0.14",
-    "gatsby-remark-autolink-headers": "^2.3.14",
-    "gatsby-remark-copy-linked-files": "^2.3.18",
-    "gatsby-remark-embed-snippet": "^4.3.16",
-    "gatsby-remark-images": "^3.3.32",
-    "gatsby-remark-prismjs": "^3.5.15",
-    "gatsby-source-filesystem": "^2.3.32",
-    "gatsby-transformer-remark": "^2.8.37",
-    "gatsby-transformer-sharp": "^2.5.16",
+    "gatsby": "~2.24.78",
+    "gatsby-plugin-manifest": "^2.4.34",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sharp": "^2.6.42",
+    "gatsby-plugin-styled-components": "^3.3.14",
+    "gatsby-plugin-typescript": "^2.4.22",
+    "gatsby-plugin-typography": "^2.5.13",
+    "gatsby-remark-autolink-headers": "^2.3.15",
+    "gatsby-remark-copy-linked-files": "^2.3.19",
+    "gatsby-remark-images": "^3.3.34",
+    "gatsby-remark-prismjs": "^3.5.16",
+    "gatsby-source-filesystem": "^2.3.34",
+    "gatsby-transformer-remark": "^2.8.40",
+    "gatsby-transformer-sharp": "^2.5.17",
     "lodash": "^4.17.20",
-    "mitt": "^2.1.0",
-    "prismjs": "^1.21.0",
-    "prop-types": "^15.7.2",
+    "prismjs": "^1.22.0",
     "query-string": "^6.13.5",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-dnd": "^11.1.3",
     "react-dnd-examples-decorators": "^11.1.3",
     "react-dnd-examples-hooks": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dnd-test-backend": "^11.1.3",
     "react-dnd-touch-backend": "^11.1.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-error-overlay": "^6.0.7",
     "react-helmet": "^6.1.0",
+    "react-is": "^16.13.1",
     "react-tabs": "^3.1.1",
     "react-typography": "^0.16.19",
     "rehype-react": "^6.1.0",
@@ -62,28 +50,31 @@
   ],
   "devDependencies": {
     "@types/query-string": "^6.3.0",
-    "@types/react": "^16.9.50",
+    "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
     "@types/react-tabs": "^2.3.2",
     "@types/rehype-react": "^4.0.0",
-    "@types/styled-components": "^5.1.3",
+    "@types/styled-components": "^5.1.4",
+    "babel-plugin-styled-components": "^1.11.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "prop-types": "^15.7.2",
+    "shx": "^0.3.2"
   },
   "scripts": {
     "clean": "rimraf .cache public apidocs static/examples_decorators_js static/examples_decorators_ts static/examples_hooks_js static/examples_hooks_ts",
-    "start": "gatsby develop -H 0.0.0.0",
-    "copy_examples:js_hooks": "cp -r ../examples-hooks/dist/docs static/examples_hooks_js",
-    "copy_examples:ts_hooks": "cp -r ../examples-hooks/src static/examples_hooks_ts",
-    "copy_examples:js_decorators": "cp -r ../examples-decorators/dist/docs static/examples_decorators_js",
-    "copy_examples:ts_decorators": "cp -r ../examples-decorators/src static/examples_decorators_ts",
+    "copy_examples:js_hooks": "shx cp -r ../examples-hooks/dist/docs static/examples_hooks_js",
+    "copy_examples:ts_hooks": "shx cp -r ../examples-hooks/src static/examples_hooks_ts",
+    "copy_examples:js_decorators": "shx cp -r ../examples-decorators/dist/docs static/examples_decorators_js",
+    "copy_examples:ts_decorators": "shx cp -r ../examples-decorators/src static/examples_decorators_ts",
     "copy_examples": "run-s 'copy_examples:*'",
     "prune_buildinfo": "rimraf static/examples_hooks_js/tsconfig.docs.tsbuildinfo static/examples_decorators_js/tsconfig.docs.tsbuildinfo",
     "format_examples": "prettier 'static/examples_*/**/*.(js|ts|tsx)' --use-tabs=false --write",
     "write_example_boilerplate": "node write_sample_boilerplate.js",
     "process_examples": "run-s copy_examples prune_buildinfo format_examples write_example_boilerplate",
-    "build_gatsby": "gatsby build --prefix-paths",
-    "build_site": "run-s process_examples build_gatsby"
+    "build:gatsby": "gatsby build --prefix-paths",
+    "start:docsite": "gatsby develop -H 0.0.0.0",
+    "build:docsite": "run-s process_examples build:gatsby"
   }
 }
