--- a/packages/documentation/examples-hooks/package.json
+++ b/packages/documentation/examples-hooks/package.json
@@ -3,9 +3,12 @@
   "version": "11.1.3",
   "private": true,
   "description": "Drag and Drop for React",
-  "main": "dist/cjs/index.js",
-  "types": "lib/esm/index.d.ts",
-  "module": "dist/esm/index.js",
+  "main": "src/index.ts",
+  "publishConfig": {
+    "main": "dist/cjs/index.js",
+    "module": "dist/esm/index.js",
+    "types": "lib/esm/index.d.ts"
+  },
   "sideEffects": false,
   "repository": {
     "type": "git",
@@ -14,9 +17,9 @@
   "license": "MIT",
   "scripts": {
     "build": "run-s build:pkg build:docs",
-    "clean": "../../../scripts/clean_package.sh",
-    "start": "../../../scripts/watch_package.sh",
-    "build:pkg": "../../../scripts/build_package.sh",
+    "clean": "gulp clean",
+    "watch": "gulp watch",
+    "build:pkg": "gulp build",
     "build:docs": "tsc -b tsconfig.docs.json"
   },
   "dependencies": {
@@ -29,17 +32,35 @@
     "react-frame-component": "^4.1.3"
   },
   "devDependencies": {
+    "@react-dnd/build": "^11.1.3",
     "@types/faker": "^5.1.2",
-    "@types/lodash": "^4.14.161",
-    "@types/react": "^16.9.50",
+    "@types/lodash": "^4.14.162",
+    "@types/node": "^14.11.8",
+    "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
+    "gulp": "^4.0.2",
     "npm-run-all": "^4.1.5",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-dnd-test-utils": "^11.1.3",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.14.0"
   },
   "peerDependencies": {
-    "react": ">= 16.9.0",
-    "react-dom": ">= 16.9.0"
+    "@types/node": ">= 12",
+    "@types/react": ">= 16.9",
+    "@types/react-dom": ">= 16.9",
+    "prop-types": ">= 15",
+    "react": ">= 16.9",
+    "react-dom": ">= 16.9"
+  },
+  "peerDependenciesMeta": {
+    "@types/node": {
+      "optional": true
+    },
+    "@types/react": {
+      "optional": true
+    },
+    "@types/react-dom": {
+      "optional": true
+    }
   }
 }
