Update Docsite Build Path in GitHub Pages Deployment (#2791)
* refactor: use a flat layout for monorepo packages

* build: update eslintignore, prettierignore

* build: update packages

* build: pnp updates, add missing ts sdk

* test: add test-backend dep

* test: fix jest tests

* chore: add semver document

* ci: skip version check on release branches

* build: add rimraf dep to docsite

* build: update docsite deploy action

* build: restore old coverage scope

* ci: update codecov action version

* build: parallelize some build tasks

* build: update coverage glob

* ci: update docsite deploy source path

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - run: yarn version check
-        if: "!contains(github.ref , 'release/') && !contains(github.head_ref , 'release/')"
+        if: "github.actor != 'dependabot-preview[bot]' && !contains(github.ref , 'release/') && !contains(github.head_ref , 'release/')"
         name: Version Check
 
       - run: yarn install
