--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -7,10 +7,13 @@ changesetIgnorePatterns:
   - '**/*.spec.{js,ts,tsx}'
 
 packageExtensions:
+  alex@*:
+    dependencies:
+      'supports-color': '^7.2.0'
   gatsby@*:
     dependencies:
-      babel-plugin-styled-components: '^1.11.1'
-      '@babel/types': '^7.12.0'
+      '@babel/types': ^7.12.0
+      babel-plugin-styled-components: ^1.11.1
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
@@ -20,4 +23,4 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
     spec: '@yarnpkg/plugin-version'
 
-yarnPath: .yarn/releases/yarn-2.3.2.cjs
+yarnPath: .yarn/releases/yarn-2.3.3.cjs
