--- a/package.json
+++ b/package.json
@@ -62,28 +62,32 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "@babel/preset-typescript": "^7.12.1",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.10",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "alex": "^9.0.1",
-    "conventional-changelog-cli": "^2.1.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.7",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "alex": "^9.1.0",
+    "conventional-changelog-cli": "^2.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-config-react-app": "^5.2.1",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-no-for-of-loops": "^1.0.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
     "inquirer": "^7.3.3",
-    "jest": "~26.4.2",
-    "jest-environment-jsdom": "^26.5.2",
-    "lint-staged": "^10.4.1",
+    "jest": "~26.6.3",
+    "jest-environment-jsdom": "^26.6.2",
+    "lint-staged": "^10.5.1",
     "markdown-spellcheck": "^1.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
@@ -93,10 +97,8 @@
     "react-dnd-test-backend": "workspace:packages/backend-test",
     "react-dnd-test-utils": "workspace:packages/test-utils",
     "react-dnd-touch-backend": "workspace:packages/backend-touch",
-    "replace-in-file": "^6.1.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "~26.4.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   },
   "resolutions": {
     "@types/react": "16.9.51",
