Build Stabilization, Dep Upgrades (#3018)
* chore: update yarn and some dependencies

* chore: dep updates

* refactor: remove gulp typings from build due to issues

* chore: cut semver document

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,23 +4,25 @@ changesetBaseRefs:
   - upstream/main
 
 changesetIgnorePatterns:
-  - '**/*.spec.{js,ts,tsx}'
+  - "**/*.spec.{js,ts,tsx}"
 
 packageExtensions:
   alex@*:
     dependencies:
-      'supports-color': '^7.2.0'
+      supports-color: ^7.2.0
   gatsby@*:
     dependencies:
-      '@babel/types': ^7.12.0
+      "@babel/types": ^7.12.0
       babel-plugin-styled-components: ^1.11.1
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: '@yarnpkg/plugin-workspace-tools'
+    spec: "@yarnpkg/plugin-workspace-tools"
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: '@yarnpkg/plugin-interactive-tools'
+    spec: "@yarnpkg/plugin-interactive-tools"
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: '@yarnpkg/plugin-version'
+    spec: "@yarnpkg/plugin-version"
+  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+    spec: "@yarnpkg/plugin-typescript"
 
-yarnPath: .yarn/releases/yarn-2.3.3.cjs
+yarnPath: .yarn/releases/yarn-2.4.0.cjs
