Migrate Chess Example Tests from PR (#3025)
* test: merge in testing-library based tests for the chessboard example (@ryota-murakami )

* refactor: remove file

* chore: cut semver file

--- a/packages/examples-hooks/package.json
+++ b/packages/examples-hooks/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@react-dnd/build": "workspace:packages/build",
+    "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/enzyme": "^3.10.8",
     "@types/faker": "^5.1.6",
