Migrate tests to testing-library (#3027)
* test: move Box tests to testing-library

* feat: move single-target integration tests to testing-library

* chore: cut semver doc

* feat: update wrapInTestContext to allow for usage with other Backends

* refactor: use the act function provided by testing-library

* refactor: use wrapWithBackend in box.spec

* refactor: update tests to use updated wrapper functions

* refactor: move drag sequence simulations into separate module

* refactor: use wrapWithBackend in tests

* feat: add testing-library drag/drop sequences to utils

* test: migrate multi-target integ test in decorators

* test: remove enzyme

* fix: add @types/node to examples-decorators

--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -5,6 +5,6 @@
     "target": "ES2015",
     "esModuleInterop": true,
     "allowJs": true,
-    "types": ["node", "jest"]
+    "types": ["node", "jest", "testing-library__jest-dom"]
   }
 }
