--- a/packages/examples-decorators/package.json
+++ b/packages/examples-decorators/package.json
@@ -35,14 +35,13 @@
     "@react-dnd/build": "workspace:packages/build",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@types/enzyme": "^3.10.8",
     "@types/faker": "^5.1.6",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/testing-library__jest-dom": "^5",
-    "enzyme": "^3.11.0",
     "gulp": "^4.0.2",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
