Flatten React-DnD Directory Structure (#3038)
* refactor: break out react-dnd's internal package structure

* chore: cut major semver due to re-layout

* fix: remove extraneous deps

* fix: jest tests

* chore: cut semver

* fix: tsconfig updates

* refactor: roll pkgs back into react-dnd using a flattened folder structure

* refactor: update DragDropManager construction; fix tests/linting

* chore: update semver document

* ci: remove redundant build script

* build: nvm

* fix: top-level build steps

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,8 +16,8 @@ jobs:
           node-version: 12.x
 
       - run: yarn install
-      - run: yarn build_all
-      - run: yarn build_docsite
+      - run: yarn build:all
+      - run: yarn build:docsite
 
       - name: deploy
         uses: peaceiris/actions-gh-pages@v2.10.1
