--- a/package.json
+++ b/package.json
@@ -37,20 +37,20 @@
   "homepage": "https://github.com/react-dnd/react-dnd",
   "scripts": {
     "preinstall": "npx only-allow yarn",
-    "clean_all": "yarn workspaces foreach -pv run clean",
-    "build_all": "yarn workspaces foreach -pv --topological-dev run build",
-    "test_all": "yarn workspaces foreach -pv run test",
-    "build_docsite": "yarn build:docsite",
-    "unit_test": "jest",
-    "unit_test:watch": "jest --watch",
-    "unit_test:coverage": "jest --coverage",
+    "clean:all": "yarn workspaces foreach --exclude @react-dnd/build -pv run clean",
+    "build:all": "yarn workspaces foreach -pv --topological-dev run build",
+    "test:all": "yarn workspaces foreach -pv run test",
+    "lint": "run-s 'lint:*'",
+    "jest": "jest",
+    "jest:watch": "jest --watch",
+    "jest:coverage": "jest --coverage",
     "lint:code": "eslint . --ext .js,.ts,.jsx,.tsx",
     "lint:spelling": "mdspell 'packages/documentation/docsite/markdown/**/*.md' --en-us --report",
     "lint:tone": "alex .",
     "lint:formatting": "pretty-quick --check",
-    "lint": "run-s 'lint:*'",
+    "build_docsite": "yarn build:docsite",
     "changelog": "conventional-changelog -p eslint -i CHANGELOG.md -s -r 0",
-    "ci": "npm-run-all -s build_all -p test_all lint unit_test:coverage build_docsite -s git-is-clean",
+    "ci": "npm-run-all -s build:all -p test:all lint jest:coverage build_docsite -s git-is-clean",
     "prettify:source": "prettier 'packages/*/*/src/**/*.ts*'",
     "prettify": "pretty-quick --fix",
     "precommit:lint": "lint-staged",
@@ -72,6 +72,8 @@
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
