--- a/packages/examples-decorators/tsconfig.json
+++ b/packages/examples-decorators/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "emitDeclarationOnly": false,
     "outDir": "./lib/",
-    "baseUrl": "./",
-    "allowSyntheticDefaultImports": true
+    "baseUrl": "./"
   },
   "include": ["./src/index.ts"]
 }
