--- a/packages/examples-hooks/package.json
+++ b/packages/examples-hooks/package.json
@@ -39,32 +39,24 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.28",
     "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
     "gulp": "^4.0.2",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
     "react-dnd-test-utils": "workspace:packages/test-utils",
-    "react-dom": "^17.0.1",
     "typescript": "^4.1.5"
   },
   "peerDependencies": {
     "@types/node": ">= 12",
     "@types/react": ">= 16",
-    "@types/react-dom": ">= 16",
     "prop-types": ">= 15",
     "react": ">= 16.14",
-    "react-dnd": ">11.1.3",
-    "react-dom": ">= 16.14",
-    "react-refresh": "*"
+    "react-dnd": ">11.1.3"
   },
   "peerDependenciesMeta": {
     "@types/node": {
       "optional": true
     },
     "@types/react": {
-      "optional": true
-    },
-    "@types/react-dom": {
       "optional": true
     },
     "react-dnd": {
