--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,6 +4,7 @@
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "lib": ["esnext", "dom"],
     "strict": true,
     "experimentalDecorators": true,
@@ -11,11 +12,6 @@
     "jsx": "react-jsx",
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
-    /**
-     * SDIs can interfere with client usage patterns of react
-     * e.g. import React from 'react' is normative, but not spec
-     * compliant, as react does not expose a default export.
-     */
-    "allowSyntheticDefaultImports": false
+    "allowSyntheticDefaultImports": true
   }
 }
